--- a/Homework_1/Homework_1.html
+++ b/Homework_1/Homework_1.html
@@ -8,33 +8,65 @@
   </head>
   <body>
     <h1>HTML (HyperText Markup Language)</h1>
-    <hr/>
-    <p><span style="border-bottom: 3px dotted #000033;">HTML</span> - это язык гипертекстовой разметки.</p>
-    <p>HTML-документ состоит из тегов.<mark>Тег - специальный управляющий код, записываемый в угловых скобках.</mark>Любой контент на веб-странице, должен быть обернут в тег, который описывает этот контент.</p>
-    <u>Теги бывают одиночные и парные.</u>
-    <p><i>Одиночные теги</i> не имеют закрывающего тега, потому что они не работают с содержимым, а выполняют какую-то функцию сами по себе.</p>
-    <p><i>Парные теги</i> состоят из двух частей — открывающего и закрывающего тегов. У закрывающего тега обязательно должен стоять слэш<s>(косая черта)</s> перед названием тега.</p>
-    <hr/>
+    <hr />
+
+    <p>
+      <abbr title="HyperText Markup Language">HTML</abbr> - это язык гипертекстовой разметки.
+    </p>
+
+    <p>
+      HTML-документ состоит из тегов.<mark>Тег - специальный управляющий код, записываемый в угловых скобках.</mark>
+      Любой контент на веб-странице, должен быть обернут в тег, который описывает этот контент.
+    </p>
+
+    <ins>Теги бывают одиночные и парные.</ins>
+
+    <p>
+      <em>Одиночные теги</em> не имеют закрывающего тега, потому что они не
+      работают с содержимым, а выполняют какую-то функцию сами по себе.
+    </p>
+
+    <p>
+      <em>Парные теги</em> состоят из двух частей — открывающего и закрывающего
+      тегов. У закрывающего тега обязательно должен стоять слэш<del>(косая черта)</del>
+      перед названием тега.
+    </p>
+    <hr />
+
     <h2>Базовая разметка htlm-документа:</h2>
-    <p style="margin-left: 30px ; line-height: 0.8">
+    <pre>
       <code>
-        &lt;!DOCTYPE html&gt; <br />
-        &lt;html lang="en"&gt; <br />
-        &emsp; &lt;head&gt; <br />
-        &emsp; &emsp; &lt;meta charset="UTF-8"&gt; <br />
-        &emsp; &emsp; &lt;title&gt; Document &lt;/title&gt; <br />
-        &emsp; &lt;/head&gt; <br />
-        &emsp; &lt;body&gt; <br />
-        &emsp; &emsp; &lt;span&gt; Hello world &lt;/span&gt; <br />
-        &emsp; &lt;/body&gt; <br />
+        <strong>&lt;</strong>!DOCTYPE html&gt;
+        &lt;html lang="en"&gt; 
+          &lt;head&gt; 
+            &lt;meta charset="UTF-8"&gt; 
+            &lt;title&gt; Document &lt;/title&gt; 
+          &lt;/head&gt; 
+          &lt;body&gt; 
+            &lt;span&gt; Hello world &lt;/span&gt;
+          &lt;/body&gt; 
         &lt;/html&gt;
       </code>
+    </pre>
+    <hr />
+
+    <p>
+      Тег <strong>&lt;html&gt; &lt;/html&gt; </strong> оборачивает весь
+      документ. Внутри данного тега добавляется все содержание html-страницы.
     </p>
-    <hr/>
-    <p>Тег <b>&lt;html&gt; &lt;/html&gt; </b> оборачивает весь документ. Внутри данного тега добавляется все содержание html-страницы.
+
+    <p>
+      Тег <strong>&lt;head&gt; &lt;/head&gt;</strong> содержит все необходимые
+      данные о html-документе. Здесь содержится вспомогательная, описательная и
+      техническая информация о странице: заголовок, описание, ключевые слова,
+      автора, кодировку, подключение стилей и шрифтов т.д. Данные внутри данного
+      тега не отображается в окне браузера, однако содержат данные, которые
+      указывают браузеру, как следует обрабатывать страницу.
     </p>
-    <p>Тег <b>&lt;head&gt; &lt;/head&gt;</b> содержит все необходимые данные о html-документе. Здесь содержится вспомогательная, описательная и техническая информация о странице: заголовок, описание, ключевые слова,
-    автора, кодировку, подключение стилей и шрифтов т.д. Данные внутри данного тега не отображается в окне браузера, однако содержат данные, которые указывают браузеру, как следует обрабатывать страницу.</p>
-    <p>Тег <b>&lt;body&gt; &lt;/body&gt;</b> cодержит основную часть документа.</p>
+
+    <p>
+      Тег <strong>&lt;body&gt; &lt;/body&gt;</strong> cодержит основную часть
+      документа.
+    </p>
   </body>
 </html>
